# DogBreedClassifierMLOps

./: .gitignore  CHECKLIST.md  LICENSE  Makefile  README.md  TODO.txt  api.dockerfile  cloudbuild.yaml  config_cpu.yaml  mlops-group13-data-service-account.json  pyproject.toml  requirements.txt  requirements_tests.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: build-docker-image.yml  build-push-docker-hub.yml  cloudbuild.yaml  codecheck.yml  tests.yml
data/: raw.dvc
data/raw/: .gitignore  dog-breeds.dvc
data/raw/.dvc/: config
dockerfiles/: train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: dog-breeds-classification-using-xception.ipynb
reports/: README.md  report.html  report.py
src/: api.py  data_loader.py  download_model_file.py  entrypoint.sh  predict_model.py  start-server.sh  train_model.py  upload-file.py
src/commiter/: commiter.py
src/conf/: training_config.yaml
src/data/: make_dataset.py
src/models/: custom_model.py  model.py
tests/data/: test_data.py  test_data_loader.py
tests/models/: test_custom_model.py  test_model.py  test_train_model.py
