[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_final"
version = "0.0.1"
description = "Final Project in Machine Learning Operations Jan 2024 at DTU"
authors = [
  { name = "Group13", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[[tool.mypy.overrides]]
module = [
  "torchvision.*",
  "Tuple.*",
  "models.*",
]
ignore_missing_imports = true
